--- a/index.html
+++ b/index.html
@@ -1,65 +1,20 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
-  <title>ハンバーガーメニュー</title>
+  <title>サイコロ</title>
 </head>
 <body>
+  <main>
 
-<header>
-<div class="logo">
-  <h1>LOGO</h1>
-</div>
-
-
-<div class="pc-menu">
-  <nav>
-    <ul>
-      <li><a href="#">Menu</a></li>
-      <li><a href="#">Menu</a></li>
-      <li><a href="#">Menu</a></li>
-    </ul>
-  </nav>
-</div>
-
-
-
-
-
-
-
-
-
-
-<div class="sp-menu">
-    <img src="img/outline_menu_black_24dp.png" id="open">
-</div>
-
-</header>
-<div class="overlay">
-    <img src="img/outline_close_black_24dp.png"id="close">
-    <nav>
-      <ul>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#">Menu</a></li>
-      </ul>
-    </nav>
-</div>
-<main>
-  <p>こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。</p>
-  <p>こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。こんにちわ。</p>
+  
+  <div id="btn">?</div>
 
 </main>
 
-
-
-
-
-<script src="js/main.js"></script>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
